Оновлення проєкту Guess The Word